<?xml version="1.0"?>
<package>
  <name>s2t_google</name>
  <version>0.1.0</version>
  <description>Google speech to text ROS publisher</description>

  <maintainer email="lp@ortelio.co.uk">Lazaros Penteridis</maintainer>
  <license>Apache 2.0</license>


  <!-- Url tags are optional, but multiple are allowed, one per tag -->
  <!-- Optional attribute type can be: website, bugtracker, or repository -->
  <!-- Example: -->
  <!-- <url type="website">http://wiki.ros.org/rosnodejs_examples</url> -->

  <author email="lp@ortelio.co.uk">Lazaros Penteridis</author>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>std_msgs</run_depend>

</package>
